--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <body>
         <ul class="nav">
             <li><a href="./">Home</a></li>
-            <li><a href="./blog" target="blank">Announcements</a></li>
-            <li><a href="./mods" target="blank">Mods</a></li>
+            <li><a href="./blog">Announcements</a></li>
+            <li><a href="./mods">Mods</a></li>
         </ul>
 
         <div class="sections">
