--- a/mods.html
+++ b/mods.html
@@ -10,9 +10,9 @@
     </head>
     <body>
         <ul class="nav">
-            <li><a href="./" target="blank">Home</a></li>
-            <li><a href="./blog" target="blank">Announcements</a></li>
-            <li><a href="./mods" target="blank">Mods</a></li>
+            <li><a href="./">Home</a></li>
+            <li><a href="./blog">Announcements</a></li>
+            <li><a href="./mods">Mods</a></li>
         </ul>
 
         <div class="sections">
