lazy load images

--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
                         <a class="left-ease" href="./blog/pride-month-2022">View Post! -></a>
                     </div>
                     <div class="image">
-                        <img src="assets/covers/pride.png"/>
+                        <img src="assets/covers/pride.png" loading="lazy"/>
                     </div>
                 </div>
             </section>
@@ -41,7 +41,7 @@
                         <a class="left-ease" href="./blog/world-bee-day-2022">View Post! -></a>
                     </div>
                     <div class="image">
-                        <img src="assets/covers/world-bee-day.png"/>
+                        <img src="assets/covers/world-bee-day.png" loading="lazy"/>
                     </div>
                 </div>
             </section>
