--- a/mods.html
+++ b/mods.html
@@ -25,7 +25,7 @@
                         <a class="left-ease" href="https://www.curseforge.com/minecraft/mc-mods/resourceful-bees">Go to Curseforge! -></a>
                     </div>
                     <div class="image">
-                        <img src="assets/covers/resourcefulbees.png"/>
+                        <img src="assets/covers/resourcefulbees.png" loading="lazy"/>
                     </div>
                 </div>
             </section>
@@ -38,7 +38,7 @@
                         <a class="left-ease" href="https://www.curseforge.com/minecraft/mc-mods/liquified-honey">Go to Curseforge! -></a>
                     </div>
                     <div class="image">
-                        <img src="assets/covers/starry.png"/>
+                        <img src="assets/covers/starry.png" loading="lazy"/>
                     </div>
                 </div>
             </section>
