--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
                         <a class="left-ease" href="https://discord.gg/resourcefulbees">Join our discord! -></a>
                     </div>
                     <div class="image">
-                        <img src="assets/covers/cover.png"/>
+                        <img src="assets/covers/cover.png" loading="lazy"/>
                     </div>
                 </div>
             </section>
             <section>
                 <div class="part">
                     <div class="image">
-                        <img src="assets/covers/astronaut.png"/>
+                        <img src="assets/covers/astronaut.png" loading="lazy"/>
                     </div>
                     <div class="text">
                         <h1 class="title">Announcements</h1>
@@ -47,7 +47,7 @@
                         <a class="left-ease" href="https://twitter.com/TeamResourceful">Follow Us On Twitter! -></a>
                     </div>
                     <div class="image">
-                        <img src="assets/covers/creeper.png"/>
+                        <img src="assets/covers/creeper.png" loading="lazy"/>
                     </div>
                 </div>
             </section>
