Update mods page with highlight

--- a/mods.html
+++ b/mods.html
@@ -42,6 +42,19 @@
                     </div>
                 </div>
             </section>
+            <section>
+                <div class="part">
+                    <div class="text">
+                        <h1 class="title">Highlight</h1>
+                        <p class="medium-text">Highlight is a mod that improves the Minecraft selection box system by allowing for resourcepack created non axis aligned selection boxes.</p>
+                        <br>
+                        <a class="left-ease" href="https://www.curseforge.com/minecraft/mc-mods/highlight">Go to Curseforge! -></a>
+                    </div>
+                    <div class="image">
+                        <img src="assets/covers/astronaut.png" loading="lazy"/>
+                    </div>
+                </div>
+            </section>
         </div>
 
         <div class="foot">
