Added new announcement

--- a/blog.html
+++ b/blog.html
@@ -20,6 +20,20 @@
             <section>
                 <div class="part">
                     <div class="text">
+                        <h1 class="title">Development Update</h1>
+                        <p class="medium-text">Resourceful Bees for 1.19.2 is nearing an official public release. We privately informed our Patrons and Discord boosters about an alpha test and mentioned it a few times in our general chat in discord. </p>
+                        <p class="blog-date">November 9th 2022</p>
+                        <br>
+                        <a class="left-ease" href="./blog/development-update">View Post! -></a>
+                    </div>
+                    <div class="image">
+                        <img src="assets/covers/cover.png" loading="lazy"/>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="part">
+                    <div class="text">
                         <h1 class="title">Pride Month</h1>
                         <p class="medium-text">Happy Pride Month from Team Resourceful. In celebration, we at Team Resourceful will give every player the ability to have a cosmetic bee in-game.</p>
                         <p class="blog-date">June 1st 2022</p>
